# keyd

./: Cargo.toml  README.md
src/: agent.rs  cli.rs  error.rs  keyd.rs  keyd_v2.rs  lib.rs  main.rs  parse.rs  parse2.rs  proxy.rs  store.rs  store_v2.rs
src/store/: models.rs  sqlite.rs
