[package]
name = "keyd"
version = "0.1.0"
authors = ["tyan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "*"
derive-try-from-primitive = "1.0.0"
openssl = "*"
bytes = "1.0.1"
libsshkey = { path = "../libsshkey" }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2.15"
tempfile = "3.2"
ctrlc = "3.1.7"

[[bin]]
name = "proxy"
path = "src/proxy.rs"