[package]
name = "keyd"
version = "0.1.0"
authors = ["tyan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-try-from-primitive = "1.0.0"
openssl = "*"
bytes = "1.0.1"
libsshkey = { git = "https://github.com/tyan-boot/libsshkey" }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2.15"
tempfile = "3.2"
ctrlc = "3.1.7"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "test-util"] }