[package]
name = "keyd"
version = "0.1.0"
authors = ["tyan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-try-from-primitive = "1.0.0"
openssl = "*"
bytes = "1.0.1"
libsshkey = { git = "https://github.com/tyan-boot/libsshkey" }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.5"
tempfile = "3.2"
ctrlc = "3.1.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }
hex = "0.4.3"
rand = "0.8.3"
clap = "2.33"
cfg-if = "1"

tokio = { version = "1.8.1", features = ["net", "signal", "macros", "io-util"] }
notify-rust = "4"
prettytable-rs = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "test-util"] }

[patch."https://github.com/tyan-boot/libsshkey"]
libsshkey = { path = "../libsshkey" }